# qrcp-cuda

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt  aliases.h  cbHandle.h  cublasWrappers.h  cusolverCheck.h  dnHandle.h  helper_cuda.h  helper_pointer.cpp  helper_pointer.h  memcpyWrappers.h  memsetWrappers.h  streamEvent.h
src/common/include/: fpDataTypes.inc
src/common/wrappers/: CMakeLists.txt  cublas.h  malloc.h  memcpy.h  memset.h
src/householder/: CMakeLists.txt  householder.cu  householder.h  identity.cu
src/identity/: CMakeLists.txt  identity.h
test/: CMakeLists.txt  householder.cpp  test_tools.cpp  test_tools.h
test/identity/: CMakeLists.txt  identity.cpp
